2003-09-25  Angus Leeming  <leeming@lyx.org>

	* insetexternal.[Ch] (TempName): new (private) nested struct with
	fake copy semantics. Enables us to use the generated copy c-tor
	in the Params struct.
	(Params::templatename, Params::tempname): use accessor functions.

2003-09-25  Angus Leeming  <leeming@lyx.org>

	* ExternalTemplate.[Ch] (getTemplateByName): now it's a const member
	function, returning a const pointer.

2003-09-23  Angus Leeming  <leeming@lyx.org>

	* ExternalTemplate.[Ch]: can have multiple preamble snippets if we
	store them in a vector, preambleNames.

	* insetexternal.C (validate): loop over all preambleNames and call
	LaTeXFeatures::addExternalPreamble with each.

2003-09-22  Martin Vermeer  <martin.vermeer@hut.fi>

	* insetbranch.C: bug fix in branches

2003-09-22  Martin Vermeer  <martin.vermeer@hut.fi>

	* insetnote.C: small clean-up.

2003-09-19  Angus Leeming  <leeming@lyx.org>

	* inset.h (generatePreview): passed a 'Buffer const &' arg.

	* insetcommand.C (string2params): clear params using the default c-tor.

	* insetinclude[Ch]: get rid of the masterFilename_ parameter in
	InsetInclude::Params. No more data in this struct than in
	InsetCommandParams, so get rid of it and use InsetCommandParams instead.
	(c-tor): no need to pass a 'Buffer const &' arg anymore.
	(clone): remove #warning as it's now redundant.
	(set): add a 'Buffer const &' arg. Make private.
	(loadIfNeeded) move out of the class definition and into namespace anon.
	(getMasterFilename, getFileName): ditto.

2003-09-18  Angus Leeming  <leeming@lyx.org>

	* insetcommand.C (setParams): use the params' copy constructor.

2003-09-18  Angus Leeming  <leeming@lyx.org>

	* insetinsetbase.h (getLabelList):
	* insetinsetcollapsable.[Ch] (getLabelList):
	* insetinsetinclude.[Ch] (getLabelList):
	* insetinsetlabel.[Ch] (getLabelList):
	* insetinsettabular.[Ch] (getLabelList):
	* insetinsettext.[Ch] (getLabelList): receive a Buffer const & arg.