@@ -1,3 +1,7 @@
+2003-09-30  Angus Leeming  <leeming@lyx.org>
+
+	* insetexternal.[Ch] (Params::read, write): new member functions.
+
 2003-09-25  Angus Leeming  <leeming@lyx.org>
 
 	* insetexternal.[Ch] (TempName): new (private) nested struct with
